@@ -64,7 +64,9 @@ class TestAdding(zeit.cms.testing.BrowserTestCase):
             article = ICMSContent('http://xml.zeit.de/online/2007/01/foo')
             self.assertEqual(True, IPublishInfo(article).published)
             for service in ['homepage', 'ios-legacy', 'parse',
-                            'twitter', 'facebook']:
+                            'twitter']:
+                # XXX temporarily disabled Facebook
+                #             'twitter', 'facebook']:
                 notifier = zope.component.getUtility(
                     zeit.push.interfaces.IPushNotifier, name=service)
                 self.assertEqual(1, len(notifier.calls))
@@ -73,11 +75,12 @@ class TestAdding(zeit.cms.testing.BrowserTestCase):
             parse = zope.component.getUtility(
                 zeit.push.interfaces.IPushNotifier, name='parse')
             self.assertEqual('Eilmeldung', parse.calls[0][2]['title'])
-            facebook = zope.component.getUtility(
-                zeit.push.interfaces.IPushNotifier, name='facebook')
-            self.assertEqual(
-                zeit.push.facebook.facebookAccountSource(None).MAIN_ACCOUNT,
-                facebook.calls[0][2]['account'])
+            # XXX temporarily disabled Facebook
+            # facebook = zope.component.getUtility(
+            #     zeit.push.interfaces.IPushNotifier, name='facebook')
+            # self.assertEqual(
+            #     zeit.push.facebook.facebookAccountSource(None).MAIN_ACCOUNT,
+            #     facebook.calls[0][2]['account'])
 
     def test_banners_and_parse_are_disabled_after_publish(self):
         # The breaking news is a normal article, so it has the normal social
